[gd_scene load_steps=9 format=2]

[ext_resource path="res://elements/ModuleDragger.tscn" type="PackedScene" id=1]
[ext_resource path="res://elements/JackIn.tscn" type="PackedScene" id=2]
[ext_resource path="res://elements/switch/Switch.tscn" type="PackedScene" id=3]
[ext_resource path="res://elements/inputs/SensorIn.gd" type="Script" id=4]
[ext_resource path="res://elements/inputs/directional_sensor_input.svg" type="Texture" id=5]
[ext_resource path="res://elements/dial/Dial.tscn" type="PackedScene" id=6]
[ext_resource path="res://elements/switch/SwitchLED.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 213, 243 )

[node name="SensorIn" type="Node2D"]
script = ExtResource( 4 )

[node name="sequencer" type="Sprite" parent="."]
scale = Vector2( 0.125, 0.125 )
texture = ExtResource( 5 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="ModuleDragger" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ModuleDragger"]
position = Vector2( 216, 245 )
shape = SubResource( 1 )

[node name="JackOut" parent="." instance=ExtResource( 2 )]
position = Vector2( 418, 105 )
rotation = -3.14159
is_input = false

[node name="JackOut2" parent="." instance=ExtResource( 2 )]
position = Vector2( 418, 175 )
rotation = -3.14159
is_input = false

[node name="JackOut3" parent="." instance=ExtResource( 2 )]
position = Vector2( 418, 245 )
rotation = -3.14159
is_input = false

[node name="JackOut4" parent="." instance=ExtResource( 2 )]
position = Vector2( 418, 315 )
rotation = -3.14159
is_input = false

[node name="JackOut5" parent="." instance=ExtResource( 2 )]
position = Vector2( 418, 385 )
rotation = -3.14159
is_input = false

[node name="JackOut6" parent="." instance=ExtResource( 2 )]
position = Vector2( 418, 455 )
rotation = -3.14159
is_input = false

[node name="RoverS" parent="." instance=ExtResource( 3 )]
position = Vector2( 245, 175 )
rotation = 1.57079
default_state = true

[node name="RockS" parent="." instance=ExtResource( 3 )]
position = Vector2( 245, 245 )
rotation = 1.57079
default_state = true

[node name="ChooserDial" parent="." instance=ExtResource( 6 )]
position = Vector2( 208, 420 )
min_angle = -180.0
rounding = 90.0
init_rot = -90.0

[node name="SwitchLED" parent="." instance=ExtResource( 7 )]
position = Vector2( 348, 105 )
off_color = Color( 0, 0.129412, 0.294118, 1 )
on_color = Color( 0.219608, 0.8, 1, 1 )
